--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,139 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  background-image: url(../images/cover-image-dark.png);
+}
+
+.page.theme_dark .title {
+  color: #DB00FF;
+  text-shadow: 4px 4px 0px #FF0070;
+}
+
+.page.theme_dark .page__description {
+  background-color: #FF0070;
+  color: #000028;
+}
+
+.page.theme_dark .header-border-bottom {
+  border-top: 1px solid #FF0070;
+  border-right: 1px solid #FF0070;
+}
+
+.page.theme_dark .header-border-top {
+  border-bottom: 1px solid #FF0070;
+  border-left: 1px solid #FF0070;
+}
+
+.page.theme_dark .header__theme-menu-button {
+  color: #FF0070;
+  border: 1px solid #FF0070;
+}
+
+.page.theme_dark .section-title {
+  color: #FF0070;
+}
+
+.page.theme_dark .subtitle {
+  background-color: #FF0070;
+}
+
+.page.theme_dark .description-text {
+  color: #F1B2CE;
+}
+
+.page.theme_dark .subtitle-advises {
+  background-color: #FF0070;
+  color: #000028;
+}
+
+.page.theme_dark .images-title {
+  background-color: #FF0070;
+  color: #000028;
+}
+
+.page.theme_dark .footer-text {
+  color: #DB00FF;
+  text-shadow: 4px 4px 0px #FF0070;
+}
+
+.page.theme_dark .footer-border-bottom {
+  border-top: 1px solid #FF0070;
+  border-right: 1px solid #FF0070;
+}
+
+.page.theme_dark .footer-border-top {
+  border-bottom: 1px solid #FF0070;
+  border-left: 1px solid #FF0070;
+}
+
+@media (prefers-color-scheme: dark) {
+  .page.theme_dark {
+    /* сохраните этот селектор в приведённом виде.
+      Так стили написанные ниже будут иметь больший вес,
+      чем стили в медиазапросе предпочтений пользователя
+    */
+    background-image: url(../images/cover-image-dark.png);
+  }
+  
+  .page.theme_dark .title {
+    color: #DB00FF;
+    text-shadow: 4px 4px 0px #FF0070;
+  }
+  
+  .page.theme_dark .page__description {
+    background-color: #FF0070;
+    color: #000028;
+  }
+  
+  .page.theme_dark .header-border-bottom {
+    border-top: 1px solid #FF0070;
+    border-right: 1px solid #FF0070;
+  }
+  
+  .page.theme_dark .header-border-top {
+    border-bottom: 1px solid #FF0070;
+    border-left: 1px solid #FF0070;
+  }
+  
+  .page.theme_dark .header__theme-menu-button {
+    color: #FF0070;
+    border: 1px solid #FF0070;
+  }
+  
+  .page.theme_dark .section-title {
+    color: #FF0070;
+  }
+  
+  .page.theme_dark .subtitle {
+    background-color: #FF0070;
+  }
+  
+  .page.theme_dark .description-text {
+    color: #F1B2CE;
+  }
+  
+  .page.theme_dark .subtitle-advises {
+    background-color: #FF0070;
+    color: #000028;
+  }
+  
+  .page.theme_dark .images-title {
+    background-color: #FF0070;
+    color: #000028;
+  }
+  
+  .page.theme_dark .footer-text {
+    color: #DB00FF;
+    text-shadow: 4px 4px 0px #FF0070;
+  }
+  
+  .page.theme_dark .footer-border-bottom {
+    border-top: 1px solid #FF0070;
+    border-right: 1px solid #FF0070;
+  }
+  
+  .page.theme_dark .footer-border-top {
+    border-bottom: 1px solid #FF0070;
+    border-left: 1px solid #FF0070;
+  }
 }
