--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,139 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  background-image: url(../images/cover-image-light.png);
+}
+
+.page.theme_light .title {
+  color: #FFC2E6;
+  text-shadow: 4px 4px 0px #FF0070;
+}
+
+.page.theme_light .page__description {
+  background-color: #ff8dcb;
+  color: #353430;
+}
+
+.page.theme_light .header-border-bottom {
+  border-top: 1px solid #353430;
+  border-right: 1px solid #353430;
+}
+
+.page.theme_light .header-border-top {
+  border-bottom: 1px solid #353430;
+  border-left: 1px solid #353430;
+}
+
+.page.theme_light .header__theme-menu-button {
+  color: #353430;
+  border: 1px solid #353430;
+}
+
+.page.theme_light .section-title {
+  color: #353430;
+}
+
+.page.theme_light .subtitle {
+  background-color: #ff8dcb;
+}
+
+.page.theme_light .description-text {
+  color: #353430;
+}
+
+.page.theme_light .subtitle-advises {
+  background-color: #ff8dcb;
+  color: #353430;
+}
+
+.page.theme_light .images-title {
+  background-color: #ff8dcb;
+  color: #353430;
+}
+
+.page.theme_light .footer-text {
+  color: #FFC2E6;
+  text-shadow: 4px 4px 0px #FF0070;
+}
+
+.page.theme_light .footer-border-bottom {
+  border-top: 1px solid #353430;
+  border-right: 1px solid #353430;
+}
+
+.page.theme_light .footer-border-top {
+  border-bottom: 1px solid #353430;
+  border-left: 1px solid #353430;
+}
+
+@media (prefers-color-scheme: light) {
+  .page.theme_light {
+    /* сохраните этот селектор в приведённом виде.
+      Так стили написанные ниже будут иметь больший вес,
+      чем стили в медиазапросе предпочтений пользователя
+    */
+    background-image: url(../images/cover-image-light.png);
+  }
+  
+  .page.theme_light .title {
+    color: #FFC2E6;
+    text-shadow: 4px 4px 0px #FF0070;
+  }
+  
+  .page.theme_light .page__description {
+    background-color: #ff8dcb;
+    color: #353430;
+  }
+  
+  .page.theme_light .header-border-bottom {
+    border-top: 1px solid #353430;
+    border-right: 1px solid #353430;
+  }
+  
+  .page.theme_light .header-border-top {
+    border-bottom: 1px solid #353430;
+    border-left: 1px solid #353430;
+  }
+  
+  .page.theme_light .header__theme-menu-button {
+    color: #353430;
+    border: 1px solid #353430;
+  }
+  
+  .page.theme_light .section-title {
+    color: #353430;
+  }
+  
+  .page.theme_light .subtitle {
+    background-color: #ff8dcb;
+  }
+  
+  .page.theme_light .description-text {
+    color: #353430;
+  }
+  
+  .page.theme_light .subtitle-advises {
+    background-color: #ff8dcb;
+    color: #353430;
+  }
+  
+  .page.theme_light .images-title {
+    background-color: #ff8dcb;
+    color: #353430;
+  }
+  
+  .page.theme_light .footer-text {
+    color: #FFC2E6;
+    text-shadow: 4px 4px 0px #FF0070;
+  }
+  
+  .page.theme_light .footer-border-bottom {
+    border-top: 1px solid #353430;
+    border-right: 1px solid #353430;
+  }
+  
+  .page.theme_light .footer-border-top {
+    border-bottom: 1px solid #353430;
+    border-left: 1px solid #353430;
+  }
 }
