--- a/styles/style.css
+++ b/styles/style.css
@@ -10,10 +10,42 @@
   background-attachment: fixed;
 }
 
+.link {
+  text-shadow: 2px 2px 0px #FF0070;
+  color: #F1B2CE;
+  font-family: "IBM Plex Mono", serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 23.4px; /* 130% */
+  text-decoration: none;
+}
+
+.link:hover {
+  color: #F1B2CE;
+  font-family: "IBM Plex Mono", serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 23.4px; /* 130% */
+  text-decoration: underline;
+}
+
+.link:focus {
+  outline: none;
+}
+
+.link:has(:focus-visible) {
+  outline: 1px solid #F1B2CE;
+  outline-offset: 1px;
+}
+
 .header {
   margin-block-start: 20px;
+  margin-block-end: 20px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  height: 100vh;
 }
 
 .header__theme-menu {
@@ -27,17 +59,30 @@
   position: relative;
 }
 
-/* .rec {
+ .rec {
+  content: "";
   color: #FF0070;
   text-align: center;
-  font-family: IBM Plex Mono;
+  font-family: "IBM Plex Mono", serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 25px; 
   position: absolute;
-  margin-inline-start: 94%;
-} */
+  margin-inline-start: 89.5vw;
+}
+
+.rec::after {
+  content: "";
+  display: inline-block;
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  background: #FF0070;
+  fill: #FF0070;
+  filter: drop-shadow(0px 0px 4px #FF0070);
+  margin-inline-start: 10px;
+}
 
 .header-border-bottom {
   width: 25px;
@@ -71,20 +116,50 @@
 .header__theme-menu-button {
   width: 70px;
   height: 26px;
-  border: 1px solid #FF0070;
   color: #FF0070;
   text-align: center;
-  font-family: "IBM Plex Mono";
+  font-family: "IBM Plex Mono", serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 18px; /* 100% */
+  background-color: transparent;
+  border: transparent;
+}
+
+.header__theme-menu-button:hover {
+  width: 70px;
+  height: 26px;
+  border: 1px solid rgba(255, 0, 112, 0.40);
+  color: #FF0070;
+  text-align: center;
+  font-family: "IBM Plex Mono", serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px; /* 100% */
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:has(:focus-visible) {
+  border-bottom: #FF0070;
+  padding-bottom: 1px;
+}
+
+.header__theme-menu-button_active {
+  pointer-events: none;
+  border: 1px solid #FF0070;
 }
 
 .title {
   color: #DB00FF;
   text-shadow: 4px 4px 0px #FF0070;
-  font-family: IBM Plex Mono;
+  font-family: "IBM Plex Mono", serif;
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem) ;
   font-style: normal;
   font-weight: 700;
@@ -98,7 +173,7 @@
 .page__description {
   background-color: #FF0070;
   color: #000028;
-  font-family: IBM Plex Mono;
+  font-family: "IBM Plex Mono", serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -111,10 +186,9 @@
 
 .hard-to-focus {
   display: grid;
-  margin-block-start: 80px;
+  margin-block-start: 60px;
   grid-template-columns: repeat(3, 1fr);
   column-gap: 20px;
-  height: 50%;
 }
 
 .why-title {
@@ -144,6 +218,7 @@
 .focus__advises {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  gap: 19px;
   margin-block-start: 80px;
 }
 
@@ -153,7 +228,7 @@
 
 .section-title {
   color: #FF0070;
-  font-family: IBM Plex Mono;
+  font-family: "IBM Plex Mono", serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -162,7 +237,7 @@
 
 .subtitle {
   color: #000028;
-  font-family: IBM Plex Mono;
+  font-family: "IBM Plex Mono", serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -176,7 +251,7 @@
 
 .subtitle-advises {
   color: #000028;
-  font-family: IBM Plex Mono;
+  font-family: "IBM Plex Mono", serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -192,13 +267,13 @@
 
 .description-text {
   color: #F1B2CE;
-  font-family: IBM Plex Mono;
+  font-family: "IBM Plex Mono", serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 23.4px; /* 130% */
   margin-block-start: 10px;
-  margin-block-end: 10px;
+  margin-block-end: 20px;
   text-align: start;
 }
 
@@ -286,7 +361,7 @@
 .footer-text {
   color: #DB00FF;
   text-shadow: 4px 4px 0px #FF0070;
-  font-family: IBM Plex Mono;
+  font-family: "IBM Plex Mono", serif;
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem) ;
   font-style: normal;
   font-weight: 700;
@@ -327,6 +402,10 @@
   margin-block-start: 156px;
 }
 
+.rec {
+  margin-inline-start: 86.5vw;
+}
+
 .header__theme-menu-list {
   display: block;
 }
@@ -363,6 +442,10 @@
     margin-block-start: 31px;
   }
 
+  .rec {
+    margin-inline-start: 81vw;
+  }
+
   .header__theme-menu {
     display: grid;
     grid-column-start: 4;
@@ -385,6 +468,7 @@
     grid-column-start: 1;
     grid-column-end: 5;
     margin-block-start: 55px;
+    text-wrap: wrap;
   }
 
   .why-title {
