Исправлены ошибки, на проверку 2

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,246 +9,21 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  background-image: url(../images/cover-image-dark.png);
+  --main-text-color: #DB00FF;
+  --bg-text-color: #000028;
+  --accent-color: #FF0070;
+  --main-font-color: #F1B2CE;
+  --bg-image: url(../images/cover-image-dark.png);
 }
 
-.page.theme_dark .title {
-  color: #DB00FF;
-  text-shadow: 4px 4px 0px #FF0070;
-}
 
-.page.theme_dark.link:focus {
-  outline: none;
-}
-
-.page.theme_dark.link:has(:focus-visible) {
-  outline: 1px solid #F1B2CE;
-  outline-offset: 1px;
-}
-
-.page.theme_dark .page__description {
-  background-color: #FF0070;
-  color: #000028;
-}
-
-.page.theme_dark .header-border-bottom {
-  border-top: 1px solid #FF0070;
-  border-right: 1px solid #FF0070;
-}
-
-.page.theme_dark .header-border-top {
-  border-bottom: 1px solid #FF0070;
-  border-left: 1px solid #FF0070;
-}
-
-.page.theme_light .rec {
-  content: "";
-  display: none;
-  color: #FF0070;
-  text-align: center;
-  font-family: "IBM Plex Mono", serif;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 25px; 
-  position: absolute;
-  margin-inline-start: 90vw;
-}
-
-.page.theme_light .rec::after {
-  content: "";
-  display: none;
-  width: 9px;
-  height: 9px;
-  border-radius: 50%;
-  background: #FF0070;
-  fill: #FF0070;
-  filter: drop-shadow(0px 0px 4px #FF0070);
-  margin-inline-start: 10px;
-  word-wrap: nowrap;
-}
-
-.page.theme_dark .header__theme-menu-button {
-  color: #FF0070;
-  border: none;
-}
-
-.page.theme_dark .header__theme-menu-button:hover {
-  width: 70px;
-  height: 26px;
-  border: 1px solid rgba(255, 0, 112, 0.40);
-  color: #FF0070;
-  text-align: center;
-  font-family: "IBM Plex Mono", serif;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 18px; /* 100% */
-  background-color: transparent;
-}
-
-.page.theme_dark.header__theme-menu-button:focus {
-  outline: none;
-}
-
-.page.theme_dark.header__theme-menu-button:has(:focus-visible) {
-  border-bottom: #FF0070;
-  padding-bottom: 1px;
-}
-
-.header__theme-menu-button_active {
-  border: 1px solid #FF0070;
-  pointer-events: none;
-}
-
-.page.theme_dark .section-title {
-  color: #FF0070;
-}
-
-.page.theme_dark .subtitle {
-  background-color: #FF0070;
-}
-
-.page.theme_dark .description-text {
-  color: #F1B2CE;
-}
-
-.page.theme_dark .subtitle-advises {
-  background-color: #FF0070;
-  color: #000028;
-}
-
-.page.theme_dark .images-title {
-  background-color: #FF0070;
-  color: #000028;
-}
-
-.page.theme_dark .footer-text {
-  color: #DB00FF;
-  text-shadow: 4px 4px 0px #FF0070;
-}
-
-.page.theme_dark .footer-border-bottom {
-  border-top: 1px solid #FF0070;
-  border-right: 1px solid #FF0070;
-}
-
-.page.theme_dark .footer-border-top {
-  border-bottom: 1px solid #FF0070;
-  border-left: 1px solid #FF0070;
-}
 
 @media (prefers-color-scheme: dark) {
-  .page.theme_dark {
-    /* сохраните этот селектор в приведённом виде.
-      Так стили написанные ниже будут иметь больший вес,
-      чем стили в медиазапросе предпочтений пользователя
-    */
-    background-image: url(../images/cover-image-dark.png);
-  }
-  
-  .page.theme_dark .title {
-    color: #DB00FF;
-    text-shadow: 4px 4px 0px #FF0070;
-  }
-  
-  .page.theme_dark .page__description {
-    background-color: #FF0070;
-    color: #000028;
-  }
-  
-  .page.theme_dark .header-border-bottom {
-    border-top: 1px solid #FF0070;
-    border-right: 1px solid #FF0070;
-  }
-  
-  .page.theme_dark .header-border-top {
-    border-bottom: 1px solid #FF0070;
-    border-left: 1px solid #FF0070;
-  }
-
-  .page.theme_dark .rec {
-    content: "";
-    color: #FF0070;
-    text-align: center;
-    font-family: "IBM Plex Mono", serif;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 25px; 
-    position: absolute;
-    margin-inline-start: clamp(85vw, 76.5em, 96%);
-  }
-
-  .page.theme_dark .rec::after {
-    content: "";
-    display: inline-flex;
-    width: 9px;
-    height: 9px;
-    border-radius: 50%;
-    background: #FF0070;
-    fill: #FF0070;
-    filter: drop-shadow(0px 0px 4px #FF0070);
-    margin-inline-start: 10px;
-    word-wrap: nowrap;
-  }
-  
-  .page.theme_dark .header__theme-menu-button {
-    color: #FF0070;
-    border: transparent;
-  }
-
-  .page.theme_dark .header__theme-menu-button_active {
-    border: 1px solid #FF0070;
-    pointer-events: none;
-  }
-  
-  .page.theme_dark .section-title {
-    color: #FF0070;
-  }
-  
-  .page.theme_dark .subtitle {
-    background-color: #FF0070;
-  }
-  
-  .page.theme_dark .description-text {
-    color: #F1B2CE;
-  }
-  
-  .page.theme_dark .subtitle-advises {
-    background-color: #FF0070;
-    color: #000028;
-  }
-  
-  .page.theme_dark .images-title {
-    background-color: #FF0070;
-    color: #000028;
-  }
-  
-  .page.theme_dark .footer-text {
-    color: #DB00FF;
-    text-shadow: 4px 4px 0px #FF0070;
-  }
-  
-  .page.theme_dark .footer-border-bottom {
-    border-top: 1px solid #FF0070;
-    border-right: 1px solid #FF0070;
-  }
-  
-  .page.theme_dark .footer-border-top {
-    border-bottom: 1px solid #FF0070;
-    border-left: 1px solid #FF0070;
-  }
-}
-
-@media (max-width: 768px) {
-  .page.theme_dark .rec {
-    margin-inline-start: 86.5vi;
-  }
-}
-
-@media (max-width: 376px) {
-  .page.theme_dark .rec {
-    margin-inline-start: 81vw;
-  }
+  :root {
+    --main-text-color: #DB00FF;
+    --bg-text-color: #000028;
+    --accent-color: #FF0070;
+    --main-font-color: #F1B2CE;
+    --bg-image: url(../images/cover-image-dark.png);
+  } 
 }
