--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@
 .link {
   text-shadow: 2px 2px 0px var(--accent-color, #FF0070);
   color: var(--main-font-color);
-  font-family: "IBM Plex Mono", sans-serif;
+  font-family: "IBM Plex Mono", monospace;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -41,6 +41,8 @@
   grid-template-columns: repeat(4, 1fr);
   height: 100vh;
   min-height: 668px;
+  position: relative;
+  max-block-size: 100vh;
 }
 
 .header__theme-menu {
@@ -50,23 +52,20 @@
   grid-column-end: 4;
 }
 
-.decorated-zone {
-  position: relative;
-}
-
  .rec {
   display: block;
   content: "";
   color: var(--accent-color, #FF0070);
   text-align: center;
-  font-family: "IBM Plex Mono", sans-serif;
+  font-family: "IBM Plex Mono", monospace;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   text-transform: uppercase;
   line-height: 25px; 
   position: absolute;
-  margin-inline-start: 89.7vw;
+  margin-inline-start: 90vw;
+  margin-block-start: 25px;
 }
 
 .rec::after {
@@ -89,6 +88,8 @@
   display: grid;
   justify-self: end;
   grid-column-start: 4;
+  grid-column-end: 5;
+  margin-block-start: 25px;
 }
 
 .decoration-border-bottom {
@@ -103,7 +104,8 @@
 }
 
 .header__theme-menu-list {
-  display: inline-flex;
+  display: flex;
+  margin-block-start: 25px;
 }
 
 .header__theme-menu-item {
@@ -116,13 +118,14 @@
   height: 26px;
   color: var(--accent-color, #FF0070);
   text-align: center;
-  font-family: "IBM Plex Mono", sans-serif;
+  font-family: "IBM Plex Mono", monospace;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 18px; /* 100% */
   background-color: transparent;
   border: transparent;
+  text-transform: lowercase;
 }
 
 .header__theme-menu-button:hover {
@@ -131,7 +134,7 @@
   border: 1px solid var(--border-button-hover);
   color: var(--accent-color, #FF0070);
   text-align: center;
-  font-family: "IBM Plex Mono", sans-serif;
+  font-family: "IBM Plex Mono", monospace;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -157,7 +160,7 @@
 .title {
   color: var(--main-text-color, #DB00FF);
   text-shadow: 4px 4px 0px var(--title-shadow, #FF0070);
-  font-family: "IBM Plex Mono", sans-serif;
+  font-family: "IBM Plex Mono", monospace;
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem) ;
   font-style: normal;
   font-weight: 700;
@@ -165,14 +168,13 @@
   display: grid;
   grid-column-start: 1;
   grid-column-end: 5;
-  margin-block-start: 300px;
-  margin-inline-start: -20px;
+  margin-block-start: 275px;
 }
 
 .page__description {
   background-color: var(--bg-for-text, #FF0070);
   color: var(--bg-text-color, #000028);
-  font-family: "IBM Plex Mono", sans-serif;
+  font-family: "IBM Plex Mono", monospace;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -188,6 +190,7 @@
   margin-block-start: 60px;
   grid-template-columns: repeat(3, 1fr);
   column-gap: 20px;
+  margin-block-start: 80px;
 }
 
 .why-title {
@@ -201,7 +204,7 @@
 }
 
 .focus-decrease {
-  margin-block-start: 80px;
+  margin-block-start: 60px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   column-gap: 20px;
@@ -219,7 +222,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 19px;
-  margin-block-start: 80px;
+  margin-block-start: 60px;
 }
 
 .advise-title {
@@ -228,7 +231,7 @@
 
 .section-title {
   color: var(--accent-color, #FF0070);
-  font-family: "IBM Plex Mono", sans-serif;
+  font-family: "IBM Plex Mono", monospace;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -237,7 +240,7 @@
 
 .subtitle {
   color: var(--bg-text-color, #000028);
-  font-family: "IBM Plex Mono", sans-serif;
+  font-family: "IBM Plex Mono", monospace;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
@@ -251,7 +254,7 @@
 
 .subtitle-advises {
   color: var(--bg-text-color, #000028);
-  font-family: "IBM Plex Mono", sans-serif;
+  font-family: "IBM Plex Mono", monospace;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -267,7 +270,7 @@
 
 .description-text {
   color: var(--main-font-color, #F1B2CE);
-  font-family: "IBM Plex Mono", sans-serif;
+  font-family: "IBM Plex Mono", monospace;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -278,7 +281,7 @@
 }
 
 .images-section {
-  margin-block-start: 80px;
+  margin-block-start: 60px;
 }
 
 .images-title {
@@ -350,9 +353,9 @@
 }
 
 .footer {
-  margin-block-start: 80px;
+  margin-block-start: 60px;
   margin-block-end: 20px;
-  height: 100vh;
+  height: 100dvh;
   min-height: 668px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -361,7 +364,7 @@
 .footer-text {
   color: var(--main-text-color, #DB00FF);
   text-shadow: 4px 4px 0px #FF0070;
-  font-family: "IBM Plex Mono", sans-serif;
+  font-family: "IBM Plex Mono", monospace;
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem) ;
   font-style: normal;
   font-weight: 700;
@@ -373,13 +376,50 @@
   grid-column-end: 3;
 }
 
+.footer .decoration-border-top {
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid var(--accent-color, #FF0070);
+  border-right: 1px solid var(--accent-color, #FF0070);
+  display: grid;
+  justify-self: end;
+  grid-column-start: 4;
+  grid-column-end: 5;
+  margin-block-end: 75px;
+  margin-block-start: 45px;
+}
+
+.footer .decoration-border-bottom {
+  width: 25px;
+  height: 25px;
+  border-bottom: 1px solid var(--accent-color, #FF0070);
+  border-left: 1px solid var(--accent-color, #FF0070);
+  display: grid;
+  align-self: end;
+  grid-column-start: 1;
+  margin-block-start: 70px;
+  margin-inline-end: 230px;
+}
+
 @media (max-width: 1024px) {
   .rec {
     margin-inline-start: 90vw;
   }
+
+  .header {
+    block-size: 100vh;
+  }
+
+  .hard-to-focus {
+    margin-block-start: 180px;
+  }
 }
 
 @media (max-width: 768px) {
+
+.header {
+  height: 1024px;
+}
 
 .header__theme-menu {
   display: grid;
@@ -388,7 +428,7 @@
   grid-row-start: 2;
   grid-row-end: 3;
   justify-self: end;
-  margin-block-start: 156px;
+  margin-block-start: 100px;
 }
 
 .rec {
@@ -404,7 +444,21 @@
 }
 
 .title {
-  margin-block-start: 173px;
+  margin-block-start: 167px;
+}
+
+.page__description {
+  margin-block-end: 10px;
+}
+
+.decrease-title {
+  grid-column-start: 1;
+  grid-column-end: 2;
+}
+
+.description-text {
+  margin-block-end: 20px;
+  letter-spacing: 0.3px;
 }
 
 .decoration-border-top {
@@ -424,24 +478,34 @@
   margin-block-start: 60px;
 }
 
+.images-section {
+  margin-block-start: 60px;
+}
+
 .card {
   display: grid;
   grid-column-start: 1;
   grid-column-end: 4;
 }
 
+.footer {
+  height: 100dvh;
+}
+
 .footer-text {
   grid-column-start: 1;
   grid-column-end: 4;
-}
+ }
 }
 
 @media (max-width: 376px) {
 
   .page {
-    margin-inline-start: 10px;
-    margin-inline-end: 10px;
-    padding-right: 10px;
+  margin: 10px;
+  }
+
+  .header {
+    height: 100dvh;
   }
 
   .header-border-top {
@@ -449,7 +513,11 @@
   }
 
   .rec {
-    margin-inline-start: 81vw;
+    margin-inline-start: 84vw;
+  }
+
+  .decoration-border-bottom {
+    margin-top: 21px;
   }
 
   .header__theme-menu {
@@ -459,7 +527,11 @@
     grid-row-start: 2;
     grid-row-end: 3;
     justify-self: end;
-    margin-block-start: 40px;
+    margin-block-start: 1px;
+  }
+
+  .header__theme-menu-item {
+    gap: 1px;
   }
   
   .title {
@@ -477,15 +549,19 @@
     margin-block-start: 55px;
   }
 
+  .description-text {
+    letter-spacing: 0.6px;
+  }
+
   .hard-to-focus {
-    margin-block-start: 135px;
+    margin-block-start: 110px;
   }
 
   .why-title {
     grid-column-start: 1;
     grid-column-end: 4;
     margin-block-end: 20px;
-    max-width: 350px;
+    max-width: 300px;
   }
 
   .why-description {
@@ -504,28 +580,32 @@
   }
 
   .focus-decrease {
-    margin-block-start: 50px;
+    margin-block-start: 30px;
+  }
+
+  .decrease-title {
+    grid-column-start: 1;
+    grid-column-end: 4;
   }
 
   .focus__advises {
-    margin-block-start: 50px;
+    margin-block-start: 30px;
   }
 
   .advise-title {
     grid-column-start: 1;
     grid-column-end: 4;
-    margin-block-end: 20px;
   }
 
   .subtitle-advises {
     grid-column-start: 1;
     grid-column-end: 4;
-    margin-block-start: 20px;
   }
 
   .footer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    height: 100dvh;
   }
   
   .footer-text {
@@ -536,10 +616,9 @@
     grid-column-end: 4;
   }
 
-  .footer-border-bottom {
-    grid-row-start: 1;
-    grid-column-start: 3;
-    justify-self: end;
+  .decoration-border-bottom {
+    justify-self: start;
+    margin-block-start: 31px;
   }
 
   .footer-border-top {
@@ -547,7 +626,7 @@
   }
 
   .images-section {
-    margin-block-start: 50px;
+    margin-block-start: 30px;
   }
 
   .images {
